# image-data-collector

./: .gitignore  example.ipynb  fetch_image_urls.py  fetch_images.py  images_data.db.db  input_data.csv  main.py  pyproject.toml
utils/: db_utils.py  file_utils.py
