[tool.poetry]
name = "image-collector"
version = "0.1.0"
description = ""
authors = ["Nagalakshmi136 <naga708523@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.20.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
